--- a/main.html
+++ b/main.html
@@ -136,9 +136,9 @@
           </div>
 
         <div class="links">
-          <span> <a href=""> F </a></span>
-          <span> <a href=""> F </a></span>
-          <span> <a href=""> F </a></span>
+          <span class="link"> <a href=""> F </a></span>
+          <span class="link"> <a href=""> F </a></span>
+          <span class="link"> <a href=""> F </a></span>
         </div>
         </div>
 
@@ -162,9 +162,7 @@
                           quia blanditiis. Exercitationem.
                       </p>
                   </div>
-      
                   <div class="skills">
-
                   </div>
       
               </section>
@@ -175,5 +173,4 @@
     </footer>
     <script src="./app.js"></script>
 </body>
-
 </html>
