--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-    <canvas id="canvas"></canvas>
+    <canvas id="canva"></canvas>
     <div class="circle"></div>
     <header>
       <div class="container-logo">
@@ -49,72 +49,26 @@
           </li>
         </ul>
       </div>
-      <nav>
-        <ul>
-          <!-- <li><a href="#">Service</a></li>
-                <li><a href="#">Blog</a></li> -->
 
-          <li><a href="#">
-              <div class="container-btn-git">
-                <div class="wrapper">
-                  <button class="btn">
-                    <div class="btn__bg">
-                      <span class="btn__bg__layer btn__bg__layer-first"></span>
-                      <span class="btn__bg__layer btn__bg__layer-second"></span>
-                      <span class="btn__bg__layer btn__bg__layer-third"></span>
-                    </div>
+      <!-- nav bar  -->
 
-                    <span class="btn__text-out">Home</span>
-                    <span class="btn__text-in">Home</span>
+      <nav class="nav">
+        <div class="nav_ul">
+
+
+          <div class="nav_li"><a href="#container_projects" class="nav_a">
+                  <button class="p_btn">
+                    <p class="p_btn_txt">Service</p>
                   </button>
-            </a></li>
+            </a></div>
 
-          <li><a href="#">
-              <div class="container-btn-git">
-                <div class="wrapper">
-                  <button class="btn">
-                    <div class="btn__bg">
-                      <span class="btn__bg__layer btn__bg__layer-first"></span>
-                      <span class="btn__bg__layer btn__bg__layer-second"></span>
-                      <span class="btn__bg__layer btn__bg__layer-third"></span>
-                    </div>
-
-                    <span class="btn__text-out">About</span>
-                    <span class="btn__text-in">About</span>
+          <div class="nav_li"><a href="#" class="nav_a">
+                  <button class="p_btn">
+                    <p class="p_btn_txt">Service</p>
                   </button>
-            </a></li>
+            </a></div>
 
-          <li><a href="#">
-              <div class="container-btn-git">
-                <div class="wrapper">
-                  <button class="btn">
-                    <div class="btn__bg">
-                      <span class="btn__bg__layer btn__bg__layer-first"></span>
-                      <span class="btn__bg__layer btn__bg__layer-second"></span>
-                      <span class="btn__bg__layer btn__bg__layer-third"></span>
-                    </div>
-
-                    <span class="btn__text-out">Service</span>
-                    <span class="btn__text-in">Service</span>
-                  </button>
-            </a></li>
-
-          <li><a href="#">
-              <div class="container-btn-git">
-                <div class="wrapper">
-                  <button class="btn">
-                    <div class="btn__bg">
-                      <span class="btn__bg__layer btn__bg__layer-first"></span>
-                      <span class="btn__bg__layer btn__bg__layer-second"></span>
-                      <span class="btn__bg__layer btn__bg__layer-third"></span>
-                    </div>
-
-                    <span class="btn__text-out">Blog</span>
-                    <span class="btn__text-in">Blog</span>
-                  </button>
-            </a></li>
-
-          <li><a href="#">
+          <div class="nav_li"><a href="#" class="nav_a">
               <div class="container-btn-git">
                 <div class="wrapper">
                   <button class="btn">
@@ -127,9 +81,9 @@
                     <span class="btn__text-out">Get in touch </span>
                     <span class="btn__text-in">Get in touch </span>
                   </button>
-            </a></li>
+            </a></div>
 
-        </ul>
+          </div>
       </nav>
     </header>
     <div class="hero">
@@ -164,12 +118,12 @@
           </div>
 
           <div class="links">
-            <span class="link"> <a href="https://twitter.com/CWE_119" target="_blank"> <i
+            <span class="link twitter"> <a href="https://twitter.com/CWE_119" target="_blank"> <i
                   class="lni lni-twitter-original"></i> </a></span>
-            <span class="link"> <a href="https://github.com/CWE-119" target="_blank"> <i
+            <span class="link github"> <a href="https://github.com/CWE-119" target="_blank"> <i
                   class="lni lni-github-original"></i> </a></span>
-            <span class="link"> <a href="https://www.linkedin.com/in/samiul-nahiyan-b0a2b9297/" target="_blank"> <i
-                  class="lni lni-linkedin"></i> </a></span>
+            <span class="link linkedin"> <a href="https://www.linkedin.com/in/samiul-nahiyan-b0a2b9297/"
+                target="_blank"> <i class="lni lni-linkedin"></i> </a></span>
           </div>
         </div>
 
@@ -178,30 +132,187 @@
         <!-- about section -->
         <section class="about" id="about">
 
-          <h1 class="heading">about me</h1>
-
-          <div class="content">
-            <h3 class="name">my name is <span>PEPEX | learner </span> </h3>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque esse consequatur sapiente! Aperiam
-              quam, mollitia obcaecati pariatur labore ad perferendis ratione corporis molestias tempore assumenda
-              adipisci porro. Mollitia, fuga recusandae.
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex amet pariatur molestias voluptatum saepe
-              atque et exercitationem quibusdam omnis quo quam placeat, in minus voluptas assumenda, doloremque
-              quia blanditiis. Exercitationem.
-            </p>
+          <div class="heading">
+            <div class="h_circle">
+              <svg id="rotatingText" viewBox="0 0 200 200" width="200" height="200">
+                <defs>
+                  <path id="circle" d="M 100, 100
+                            m -75, 0
+                            a 75, 75 0 1, 0 150, 0
+                            a 75, 75 0 1, 0 -150, 0
+                            ">
+                  </path>
+                </defs>
+                <text class="c_text" width="400">
+                  <textPath alignment-baseline="top" xlink:href="#circle" class="text">
+                    About Me! About Me! About Me!
+                  </textPath>
+                </text>
+              </svg>
+            </div>
           </div>
-          <div class="skills">
+
+          <div class="infos_skills scroll_child">
+            <!-- infos -->
+            <div class="infos">
+              <h3 class="name">My name is <span>SAIF AHMED</span> </h3>
+              <p>
+                Learning, exploring, gathering newinformation, and contributing some freshthoughts are my main
+                objectives.
+                Workactively and establish a network of newrelationships. Increasing my leadershippotential and totally
+                committing to my
+                work.
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex amet pariatur molestias voluptatum saepe
+                atque et exercitationem quibusdam omnis quo quam placeat, in minus voluptas assumenda, doloremque
+                quia blanditiis. Exercitationem.
+              </p>
+
+              <!-- cards -->
+              <div class="cards_title">
+                <p> My skills</p>
+              </div>
+              <div class="cards">
+                <!-- card 1 -->
+                <div class="card">
+                  <ul class="e_list">
+
+                    <li class="ce_title">
+                      <p class="e_title">Academics </p>
+                    </li>
+
+                    <li class="e_places">
+                      <ul>
+
+                        <li>
+                          <p class="ce_text">Canadian University of Bangladesh</p>
+                        </li>
+                        <li>
+                          <p class="ce_date">BSc. COMPUTER SCIENCE AND ENGINEERING “CGPA: 3.12/4.00"</p>
+                        </li>
+
+                        <li>
+                          <p class="ce_text">Juvenile English Medium School</p>
+                        </li>
+                        <li>
+                          <p class="ce_date">O Levels</p>
+                        </li>
+
+                        <li>
+                          <p class="ce_text">General Educational Development</p>
+                        </li>
+                        <li>
+                          <p class="ce_date">Mentors "score: 622/700" </p>
+                        </li>
+
+                      </ul>
+                    </li>
+                  </ul>
+                </div>
+                <!-- card 1 -->
+                <!-- card 2 -->
+                <div class="card">
+                  <ul class="e_list">
+
+                    <li class="ce_title">
+                      <p class="e_title">EXPERIENCE </p>
+                    </li>
+
+                    <li class="e_places">
+                      <ul>
+
+                        <li>
+                          <p class="ce_text">YM Ventures 2020-2021</p>
+                        </li>
+                        <li>
+                          <p class="ce_date">Telemarketer/Cold Caller</p>
+                        </li>
+
+                        <li>
+                          <p class="ce_text">Youth Voice of Bangladesh</p>
+                        </li>
+                        <li>
+                          <p class="ce_date">Treasurer 2019-Present</p>
+                        </li>
+
+                        <li>
+                          <p class="ce_text">Vintage V Mirpur</p>
+                        </li>
+                        <li>
+                          <p class="ce_date">Business Manager 2020-Present Sales Generated(September
+                            2023-Present)-3Million BDT </p>
+                        </li>
+
+                      </ul>
+                    </li>
+                  </ul>
+                </div>
+                <!-- card 2 -->
+                <!-- card 3 -->
+                <div class="card">
+                  <ul class="e_list">
+
+                    <li class="ce_title">
+                      <p class="e_title">Expertise </p>
+                    </li>
+
+                    <li class="e_places">
+                      <ul>
+
+                        <li>
+                          <p class="ce_text">Management Skills</p>
+                        </li>
+
+
+                        <li>
+                          <p class="ce_text">Creativity</p>
+                        </li>
+
+
+                        <li>
+                          <p class="ce_text">Digital Marketing</p>
+                        </li>
+
+                        <li>
+                          <p class="ce_text">Negotiation</p>
+                        </li>
+
+                        <li>
+                          <p class="ce_text">Leadership</p>
+                        </li>
+
+                        <li>
+                          <p class="ce_text">Digital Marketing</p>
+                        </li>
+
+                      </ul>
+                    </li>
+                  </ul>
+                </div>
+                <!-- card 3 -->
+              </div>
+            </div>
+            <!-- infos -->
+
+            <!-- skills -->
+            <div class="skills">
+              <canvas id="myChart" class="chartjs"></canvas>
+              <div class="c_info">
+                <p class="p_text">
+                  This chart do not represent my skills, i just thought this looks cool so i kept it.
+                </p>
+              </div>
+            </div>
+            <!-- skills -->
           </div>
         </section>
 
         <!-- Project section -->
-        <section class="projects" id="projects">
-          <div class="container_projects">
+        <section class="projects scroll_child" id="projects">
+          <div class="container_projects" id="container_projects">
             <h1 class="text_proj">TEXT EFFECT<span class="span_proj">WOAH</span></h1>
-            <h1 class="text_proj">GSAP<span class="span_proj">AND CLIPPING</span></h1>
+            <h1 class="text_proj" id="gsap">GSAP<span class="span_proj">AND CLIPPING</span></h1>
             <h1 class="text_proj">CRAZYYY<span class="span_proj">CRAZYYY</span></h1>
             <h1 class="text_proj">HOVER ON ME<span class="span_proj"><a class="a_proj"
                   href="https://stacksorted.com/text-effects/minh-pham" target="_blank_proj">SOURCE</a></span></h1>
@@ -217,6 +328,89 @@
       <h3>&copy; All Right Reserved</h3>
     </footer>
     <script src="./app.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollToPlugin.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js"></script>
+    <script>
+      var s_c = document.getElementById("myChart");
+      var data = {
+        labels: [
+          "Communication",
+          "Client Handling",
+          "Marketing",
+          "Creativity",
+          "Negotiation",
+          "Digital Marketing",
+          "Sales",
+          "Leading Teams",
+        ],
+        datasets: [
+          {
+            label: "Perceived Interest",
+            fillColor: "rgba(43,176,212,.4)",
+            strokeColor: "rgba(43,176,212,1)",
+            pointColor: "rgba(43,176,212,1)",
+            pointHighlightStroke: "rgba(43,176,212,1)",
+            data: [100, 70, 85, 90, 95, 75, 90, 100],
+          },
+          {
+            label: "Relative Skill",
+            fillColor: "rgba(140,200,50,.4)",
+            strokeColor: "rgba(140,200,50,1)",
+            pointColor: "rgba(140,200,50,1)",
+            pointHighlightStroke: "rgba(140,200,50,1)",
+            data: [85, 75, 70, 80, 85, 60, 75, 50],
+          },
+        ],
+      };
+      new Chart(s_c, {
+        type: "radar",
+        data: data,
+        options: {
+          animationSteps: 30,
+          animationEasing: "easeInOutExpo",
+          responsive: true,
+          showTooltips: true,
+          scaleOverride: true,
+          scaleSteps: 5,
+          scaleStepWidth: 20,
+          scaleStartValue: 0,
+          scaleLineColor: "rgba(200,200,200,.15)",
+
+          angleShowLineOut: true,
+          angleLineWidth: 1,
+          angleLineColor: "rgba(200,200,250,.15)",
+          pointLabelFontFamily:
+            "'freight-sans-pro', Calibri, Candara, Segoe, 'Segoe UI', Optima, Arial, sans-serif",
+          pointLabelFontSize: 14,
+          pointLabelFontColor: "#99b",
+          pointDot: false,
+          datasetStrokeWidth: 1,
+        },
+      });
+    </script>
+
+    <script>
+      gsap.registerPlugin(ScrollTrigger);
+
+      const textElements = gsap.utils.toArray('.text_proj');
+
+      textElements.forEach(text => {
+        gsap.to(text, {
+          backgroundSize: '100%',
+          ease: 'none',
+          scrollTrigger: {
+            trigger: text,
+            start: 'center 80%',
+            end: 'center 20%',
+            scrub: true,
+          },
+        });
+      });
+    </script>
   </body>
 
 </html>
