--- a/main.html
+++ b/main.html
@@ -64,7 +64,7 @@
 
           <div class="nav_li"><a href="#" class="nav_a">
                   <button class="p_btn">
-                    <p class="p_btn_txt">Service</p>
+                    <p class="p_btn_txt">Blog</p>
                   </button>
             </a></div>
 
