--- a/main.html
+++ b/main.html
@@ -155,7 +155,7 @@
           <div class="infos_skills scroll_child">
             <!-- infos -->
             <div class="infos">
-              <h3 class="name">My name is <span>SAIF AHMED</span> </h3>
+              <h3 class="name">My name is <span id="name" data-shadow='SAIF AHMED'>SAIF AHMED</span> </h3>
               <p>
                 Learning, exploring, gathering newinformation, and contributing some freshthoughts are my main
                 objectives.
