--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
 
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Saif's Portfolio</title>
   </head>
 
   <body>
