--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
           </div>
 
           <div class="links">
-            <span class="link twitter"> <a href="https://twitter.com/CWE_119" target="_blank"> <i
+            <span class="link twitter"> <a href="https://x.com/Bizness_ahmed" target="_blank"> <i
                   class="lni lni-twitter-original"></i> </a></span>
-            <span class="link github"> <a href="https://github.com/CWE-119" target="_blank"> <i
-                  class="lni lni-github-original"></i> </a></span>
+<!--             <span class="link github"> <a href="https://github.com/CWE-119" target="_blank"> <i
+                  class="lni lni-github-original"></i> </a></span> -->
             <span class="link linkedin"> <a href="https://www.linkedin.com/in/saif-ahmed007/"
                 target="_blank"> <i class="lni lni-linkedin"></i> </a></span>
           </div>
@@ -297,7 +297,7 @@
 
             <!-- skills -->
             <div class="skills">
-              <canvas id="myChart" class="chartjs"></canvas>
+<!--               <canvas id="myChart" class="chartjs"></canvas> -->
               <div class="c_info">
                 <p class="p_text">
                   This chart do not represent my skills, i just thought this looks cool so i kept it.
